--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -61,7 +61,7 @@ $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
-$body-color                 : #fff;
+$body-color                 : #cce8cf;
 $background-color           : #cce8cf;
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
