--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -66,7 +66,7 @@ $background-color           : #cce8cf;
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
 $text-color                 : $dark-gray;
-$border-color               : $lighter-gray;
+$border-color               : #cce8cf;
 
 $primary-color              : #7a8288;
 $success-color              : #62c462;
